fix(tag): corrected alignment of focus indicator
fix(tag): focus ring alignment rtl

--- a/components/tag/index.css
+++ b/components/tag/index.css
@@ -300,7 +300,8 @@ governing permissions and limitations under the License.
   }
 
   &:focus-visible,
-  &.is-focused {
+  &.is-focused,
+  &:nth-child(3) {
     border-color: var(--highcontrast-tag-border-color-focus, var(--mod-tag-border-color-focus, var(--spectrum-tag-border-color-focus)));
     background-color: var(--highcontrast-tag-background-color-focus, var(--mod-tag-background-color-focus, var(--spectrum-tag-background-color-focus)));
     color: var(--highcontrast-tag-content-color-focus, var(--mod-tag-content-color-focus, var(--spectrum-tag-content-color-focus)));
@@ -311,15 +312,29 @@ governing permissions and limitations under the License.
       display: inline-block;
       position: absolute;
       margin: auto;
-      left: calc((var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap)) * -2) + (var(--mod-tag-border-width, var(--spectrum-tag-border-width)) * -1));
-      top: calc((var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap)) * -2) + (var(--mod-tag-border-width, var(--spectrum-tag-border-width)) * -1));
-      width: calc(100% + (var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap)) * 2)
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      /* ensures focus indicator centers if borders or gap change */
+      margin-inline-start: calc((var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap))
+                                + var(--mod-tag-border-width, var(--spectrum-tag-border-width))
+                                + var(--mod-tag-focus-ring-thickness, var(--spectrum-tag-focus-ring-thickness)))
+                                * -1);
+      margin-block-start: calc((var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap))
+                                + var(--mod-tag-border-width, var(--spectrum-tag-border-width))
+                                + var(--mod-tag-focus-ring-thickness, var(--spectrum-tag-focus-ring-thickness)))
+                                * -1);
+
+      inline-size: calc(100% + (var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap)) * 2)
                   + (var(--mod-tag-border-width, var(--spectrum-tag-border-width)) * 2));
-      height: calc(100% + (var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap)) * 2)
+      block-size: calc(100% + (var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap)) * 2)
                   + (var(--mod-tag-border-width, var(--spectrum-tag-border-width)) * 2));
+
       border-color: var(--highcontrast-tag-focus-ring-color, var(--mod-tag-focus-ring-color, var(--spectrum-tag-focus-ring-color)));
       border-radius: calc(var(--mod-tag-corner-radius, var(--spectrum-tag-corner-radius))
-                           + var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap)));
+                           + var(--mod-tag-focus-ring-gap, var(--spectrum-tag-focus-ring-gap))
+                           + var(--mod-tag-border-width, var(--spectrum-tag-border-width)));
       border-width: var(--mod-tag-focus-ring-thickness, var(--spectrum-tag-focus-ring-thickness));
       border-style: solid;
     }
